[package]
name = "plot_pilot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
chrono = "0.4"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
